# SK2_Asteroids

./: .gitmodules  CMakeLists.txt
ext/: CMakeLists.txt
src/: CMakeLists.txt  client.c  main.c  server.c
src/connection/: CMakeLists.txt
src/connection/include/: player_types.h  player_utils.h
src/dynamics/: collisions.c
src/dynamics/include/: collisions.h
src/gui/: CMakeLists.txt  glfw.c  gui.c  shader.c
src/gui/include/: glfw.h  gui.h  shader.h  shader_src.h
src/include/: client.h  messeges.h  player.h  server.h
src/shared/: CMakeLists.txt  entity.c  extensions.c  loop.c  messages.c  player.c  room.c  sleep.c  socket.c
src/shared/include/: entity.h  extensions.h  loop.h  messages.h  player.h  room.h  sleep.h  socket.h
src/utils/: CMakeLists.txt  auto.c  interpolate.c  poll.c  queue.c  radix.c  search.c
src/utils/include/: auto.h  interpolate.h  poll.h  queue.h  radix.h  search.h  socket.h
tests/: CMakeLists.txt
tests/interpolate/: CMakeLists.txt  interpolate_test.c
tests/poll/: CMakeLists.txt  poll_test.c
tests/queue/: CMakeLists.txt  queue_test.c
